# mmck-template

./: .gdbinit  .gitignore  .travis.yml  Makefile  Makefile.am  NEWS  README  README.md  acinclude.m4  configure.ac  gdbinit  module-alpha.scm  module-beta-one.scm  module-beta-two.scm  module-for-expand.import.scm  module-for-expand.scm  program-using-alpha.scm  program-using-beta-module-main.scm  program-using-beta.scm
doc/: macros.texi  mmck-template.texi  mmux-chicken-template.texi
lib/: config.scm.in  mmck.template.alpha.scm  mmck.template.scm  mmck.template.version.scm  mmux-chicken-template-alpha.scm  mmux-chicken-template-version.scm  mmux-chicken-template.scm  mmux.template.alpha.scm  mmux.template.scm  mmux.template.version.scm
meta/autoconf/: mmux-chicken-scheme.m4  mmux-split-version.m4
meta/automake/: mmck-rules.make  mmux-chicken-rules.make
meta/travis-ci/: install-chicken.sh  install-mmck-checks.sh  install-mmux-chicken-checks.sh
tests/: test-alpha.scm  test-version.scm
